Add webpack configurations

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <title>CustomSkinLoader GUI for Web</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./node_modules/highlight.js/styles/atelier-savanna-light.css">
 </head>
 
 <body style="margin: 0; display: block">
-  <div id="app"></div>
-  <script src="./bundle.js"></script>
+  <div id="app">
+    <!-- App code will be injected here. -->
+  </div>
 </body>
 
 </html>
