--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>CustomSkinLoader GUI for Web</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1565c0">
 </head>
 
 <body style="margin: 0; display: block">
