add `as` attribute for preload

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <title>CustomSkinLoader GUI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.19/dist/shoelace/shoelace.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.19/themes/dark.css">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/highlight.js@10.2.1/styles/atom-one-light.css">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/highlight.js@10.2.1/styles/atom-one-dark.css">
+    <link rel="preload" as="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@10.2.1/styles/atom-one-light.css">
+    <link rel="preload" as="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@10.2.1/styles/atom-one-dark.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
